tdf#143200 assert when pasting a cell to a large-height range

The values are unfortunately genuinely outside the range that our
Fraction class can work with.
So do the least-bad thing for now, and reduce the magnitude of the
values until they fit.

Change-Id: Iedc34e9767b3d4a502f5d84efcdebc96c6514cac
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/150493
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>